syntax = "proto3";

package types;

import "lib/types/base.proto";
import "lib/types/metadata.proto";
import "lib/types/taskdata.proto";

option go_package = "github.com/Metisnetwork/Metis-Carrier/lib/types";


message PowerMsg {
  /**
  PowerId   string `json:"powerId"`
	JobNodeId string `json:"jobNodeId"`
	CreateAt  uint64 `json:"createAt"`
   */
  string  power_id = 1;
  string  job_node_id = 2;
  uint64  create_at = 3;
}


message MetadataMsg {
  /**
  MetadataId      string                    `json:"metadataId"`
	MetadataSummary *libtypes.MetadataSummary `json:"metadataSummary"`
	CreateAt        uint64                    `json:"createAt"`
   */
  string                    metadata_id = 1;
  MetadataSummary           metadata_summary = 2;
  uint64                    create_at = 4;
}


message MetadataAuthorityMsg {
  /**
  MetadataAuthId string                   `json:"metaDataAuthId"`
	User           string                   `json:"user"`
	UserType       apicommonpb.UserType     `json:"userType"`
	Auth           *types.MetadataAuthority `json:"auth"`
	Sign           []byte                   `json:"sign"`
	CreateAt       uint64
   */
  string                        metadata_auth_id = 1;
  string                        user = 2;
  UserType                      user_type = 3;
  MetadataAuthority             auth = 4;
  bytes                         sign = 5;
  uint64                        create_at = 6;
}

message TaskMsg {
  /**
  Data          *Task
   */
  TaskPB                  data = 1;
}